--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,7 +30,7 @@ jobs:
 
     - name: Push Docker Image
       run: |
-        docker push tavi1/docker-graphql:0.0.2 .
+        docker push tavi1/docker-graphql:0.0.2
         
         
 #    - name: Build the Docker image
