--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,19 +30,22 @@ jobs:
       env:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        NEW_VERSION: ${{ steps.version.outputs.version }}
+        
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-        echo "New version: $NEW_VERSION!!!!!!"
 
     - name: Build Docker Image
+      env:
+        NEW_VERSION: ${{ steps.version.outputs.version }}
       run: |
-        docker build -t tavi1/docker-graphql:0.0.2 .
+        docker build -t tavi1/docker-graphql:$NEW_VERSION .
         docker build -t tavi1/docker-graphql:latest .
 
     - name: Push Docker Image
+      env:
+        NEW_VERSION: ${{ steps.version.outputs.version }}
       run: |
-        docker push tavi1/docker-graphql:0.0.2
+        docker push tavi1/docker-graphql:$NEW_VERSION
         docker push tavi1/docker-graphql:latest
         
         
